CMAKE_MINIMUM_REQUIRED(VERSION 3.16.3)

PROJECT(ConcurrencyTest)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Debug)
#  SET(CMAKE_BUILD_TYPE Release)
ENDIF()

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED TRUE)
SET(CMAKE_CXX_EXTENSIONS FALSE)

FIND_PACKAGE( Threads )

ADD_EXECUTABLE(concurrency_test src/concurrency_test.cpp src/concurrency.hpp)
TARGET_LINK_LIBRARIES(concurrency_test ${CMAKE_THREAD_LIBS_INIT})
SET_PROPERTY(TARGET concurrency_test PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET concurrency_test PROPERTY INTERPROCEDURAL_OPTIMIZATION True)
IF(MSVC)
  SET_PROPERTY(TARGET concurrency_test PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
ENDIF()
